# opengl-test

./: .gitignore  CMakeLists.txt
lib/GLFW/: glfw3.lib
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  basic.shader  main.cpp  render.cpp  render.h  shader.cpp  shader.h  stb_image.h
